test/fixtures/typecheck/pass/HigherKindApplication.kite
module HigherKindApplication

foo : f a -> f a
foo = \x -> x

bar : [Int]
bar = let g : f a -> f a
          g = \x -> x
       in g [1]
