test/fixtures/typecheck/fail/BadPatternMatch.kite
module BadPatternMatch

foo : Int -> Int
foo = True -> 0
